--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-plugin-styled-components": "^1.12.0",
     "gatsby": "^3.2.1",
     "gatsby-plugin-styled-components": "^4.3.0",
+    "mousetrap": "^1.6.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
