--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.12.0",
+    "focus-trap-react": "^8.4.2",
     "gatsby": "^3.2.1",
     "gatsby-plugin-styled-components": "^4.3.0",
     "mousetrap": "^1.6.5",
